Added Morning Chai and CSV Upload

--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 VITE_SUPABASE_URL=https://emoaqklcwomhoxkgploe.supabase.co
 
 VITE_SUPABASE_ANON_KEY=sb_publishable_sGP36KjiNa29Hfq4xwZYug_LDcesKus
+
+VITE_GEMINI_KEY=AIzaSyAtS9jLgWoYY0E6z5pxnQogZX1kIgSeaYI
